Fix Events info on tablet screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -354,18 +354,13 @@ footer {
 /* Events page */
 #events-info {
     background-color: #C8A7AB;
-    background-size: contain;
-    overflow: hidden;
     color: #fff;
-
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-template-rows: auto auto;
     grid-column-gap: 10px;
-
     padding: 5%;
-    max-width: 100%;
-    max-height: 100%;
+
 }
 
 #events-info>h2 {
@@ -378,7 +373,8 @@ footer {
 
 #events-info>div {
     grid-row: 2;
-    background-color: rgba(44, 110, 73, .7);
+    background-color: rgba(44, 110, 73);
+    border: 10px solid #C5D86D;
     text-align: center;
 
     border-radius: 25px;
@@ -400,7 +396,6 @@ h5 {
 #sign-up {
     background-color: #305373;
     color: #fff;
-    width: 100%;
 }
 
 form {
@@ -610,15 +605,19 @@ h3 {
     /* Events page */
     #events-info {
         display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+        flex-direction: column;
         background-color: #C8A7AB;
         color: #fff;
         margin-top: 5%;
     }
 
+    #events-info>h2 {
+        font-size: 200%;
+    }
+
     #events-info>div {
-        padding: 1%;
+        font-size: 150%;
+        padding-bottom: 5%;
     }
 }
 
